--- a/web.config
+++ b/web.config
@@ -1,9 +1,10 @@
+```xml //这里放你的代码 
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
        <rewrite>
 	<rules>
-		<rule name="portal_topic">
+	```	<rule name="portal_topic">
 			<match url="^(.*/)*topic-(.+).html\?*(.*)$" />
 			<action type="Rewrite" url="{R:1}/portal.php\?mod=topic&amp;topic={R:2}&amp;{R:3}" />
 		</rule>
