--- a/web.config
+++ b/web.config
@@ -1,10 +1,11 @@
-```xml //这里放你的代码 
+![image](https://www.baidu.com/img/bd_logo1.png)
+···php
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
        <rewrite>
 	<rules>
-	```	<rule name="portal_topic">
+	<rule name="portal_topic">
 			<match url="^(.*/)*topic-(.+).html\?*(.*)$" />
 			<action type="Rewrite" url="{R:1}/portal.php\?mod=topic&amp;topic={R:2}&amp;{R:3}" />
 		</rule>
@@ -44,3 +45,4 @@
 </rewrite>
     </system.webServer>
 </configuration>
+	```
