--- a/web.config
+++ b/web.config
@@ -1,3 +1,4 @@
+```php
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
@@ -43,3 +44,4 @@
 </rewrite>
     </system.webServer>
 </configuration>
+'''
