--- a/web.config
+++ b/web.config
@@ -1,4 +1,6 @@
-```php
+```php 
+echo 'hello word!';
+```
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
@@ -44,4 +46,3 @@
 </rewrite>
     </system.webServer>
 </configuration>
-'''
